# chat-app

./: .gitignore  README.md  requirements.txt
azure/: function_app.py
client/: index.html  package-lock.json  package.json
client/public/animations/: Breathing Idle.fbx
client/public/models/: Avatar.glb  animations.glb  myAnimations.glb
client/src/: App.css  App.jsx  index.css  main.jsx
client/src/components/: Avatar.jsx  Experience.jsx  UI.jsx
client/src/hooks/: useChat.jsx
client/src/styles/: global.css
server/: .dockerignore  .gitignore  Dockerfile  data.txt  gunicorn.conf.py  pyproject.toml  requirements.txt
server/src/: config.py  main.py
server/src/controls/: api.py  endpoints.py
server/src/embeddings/: vector.py
server/src/langchain_db/: chroma.sqlite3
server/src/models/: db_services.py
server/src/scripts/: rag_shell.py  sk-ollama.py  test_buckwater.py
server/src/view/static/: style2.css
server/src/view/static/js/: avatar.js  demo.js
server/src/view/templates/: azure-audio-streaming.html  demo.html  portfolio.html
src/: config.py  main.py
src/api/: endpoints.py
src/controls/: endpoints.py
src/embeddings/: vector.py
src/scripts/: rag_shell.py  sk-ollama.py
src/static/: style.css
src/templates/: index.html  index1.html
src/utils/: db_services.py
src/view/static/: style.css
src/view/templates/: index.html
